[build-system]
requires = ["setuptools >= 45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "weavetab"
dynamic = ["version"]
description = "Extract flux-calibrated spectra and their spatial coordinates from WEAVE FITS data cubes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "María Chillarón", email = "mariachillaronv@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "teareduce"
]

[project.optional-dependencies]
test = [
    "pytest>=6",
    "pytest-remotedata",
]

[project.urls]
Homepage = "https://github.com/mchillaron/weavetab"
Repository = "https://github.com/mchillaron/weavetab.git"

[project.scripts]
weavetab = "weavetab.extract_cube_spectra:main"

# pyproject.toml
[tool.setuptools_scm]
write_to = "src/weavetab/_version.py"

# without this, still works, performs autodetection
[tool.setuptools.packages.find]
where = ["src"]